--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -8,13 +8,12 @@
 
     </head>
     <body>
-        <main>
-            <h1>Tristan's Portfolio</h1>
-            <h2> what time is it?</h2>
-            <h3>this is a test</h3>
-            <h4>what is this</h4>
-            <h5>hello</h5>
-            <h6>what time is it</h6>
-        </main>
+        <!-- div is mainly used for styling unlike section -->
+        <div class="title">
+            <main>
+                <h1>Tristan Colaco</h1>
+                <h3> Welcome to my Portfolio</h3>
+            </main>
+        </div>
     </body>
 </html>
